--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/ssr": "^19.2.11",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^2.2.19",
+    "three": "^0.176.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -42,6 +44,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
