--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.11",
-    "@angular/cdk": "^19.2.16",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/material": "^19.2.16",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
-    "@angular/ssr": "^19.2.11",
-    "@fortawesome/angular-fontawesome": "^1.0.0",
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.6",
-    "express": "^4.18.2",
-    "rxjs": "~7.8.0",
-    "tailwindcss": "^2.2.19",
-    "three": "^0.176.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/animations": "19.2.11",
+    "@angular/cdk": "19.2.16",
+    "@angular/common": "19.2.11",
+    "@angular/compiler": "19.2.11",
+    "@angular/core": "19.2.11",
+    "@angular/forms": "19.2.11",
+    "@angular/material": "19.2.16",
+    "@angular/platform-browser": "19.2.11",
+    "@angular/platform-browser-dynamic": "19.2.11",
+    "@angular/platform-server": "19.2.11",
+    "@angular/router": "19.2.11",
+    "@angular/ssr": "19.2.11",
+    "@fortawesome/angular-fontawesome": "1.0.0",
+    "@fortawesome/fontawesome-free": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@popperjs/core": "2.11.8",
+    "bootstrap": "5.3.6",
+    "express": "4.18.2",
+    "rxjs": "7.8.0",
+    "tailwindcss": "2.2.19",
+    "three": "0.176.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
-    "@angular/compiler-cli": "^19.2.0",
-    "@tailwindcss/postcss": "^4.1.6",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "@types/three": "^0.176.0",
-    "autoprefixer": "^10.4.21",
-    "jasmine-core": "~5.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.3",
-    "typescript": "~5.7.2"
+    "@angular-devkit/build-angular": "19.2.11",
+    "@angular/cli": "19.2.11",
+    "@angular/compiler-cli": "19.2.11",
+    "@tailwindcss/postcss": "4.1.6",
+    "@types/express": "4.17.17",
+    "@types/jasmine": "5.1.0",
+    "@types/node": "18.18.0",
+    "@types/three": "0.176.0",
+    "autoprefixer": "10.4.21",
+    "jasmine-core": "5.6.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "postcss": "8.5.3",
+    "typescript": "5.7.2"
   }
 }
